@@ -190,6 +190,13 @@ more information on writing scripts, please refer to the
         <code>type="antlib:example.org:newtype"</code></td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">any resource or resource collection</td>
+    <td valign="top">Since Ant1.7.1, this task can load scripts
+    from any resource supplied as a nested element. when </td>
+    <td valign="top" align="center">No</td>
+  </tr>
+
 </table>
 
   <h4>classpath</h4>
@@ -197,6 +204,7 @@ more information on writing scripts, please refer to the
     See the <a href="../OptionalTasks/script.html">script</a> task
     for using this nested element.
   </p>
+
 
 <h3>Examples</h3>
 
